# animus-cli

./: .aider.chat.history.md  .aider.input.history  .dockerignore  .gitignore  .mcp.json  AGENTS.md  CHANGELOG-v0.0.18.md  CHANGELOG-v0.0.19.md  CHANGELOG-v0.0.20.md  CHANGELOG-v0.1.0.md  CHANGELOG-v0.1.1.md  CHANGELOG-v0.2.0.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yaml  package-lock.json  skills-lock.json
crates/agent-runner/: Cargo.toml  README.md
crates/agent-runner/src/: cleanup.rs  config.rs  lib.rs  lock.rs  main.rs
crates/llm-cli-wrapper/: .gitignore  Cargo.toml  OPENCODE_SETUP.md  QUICKSTART.md  README.md  TEST_RESULTS.md  TEST_RESULTS_COMPLETE.md  TEST_RESULTS_FINAL.md  TEST_SUMMARY.md  config.example.toml  test_spawn.rs
crates/llm-cli-wrapper/src/: config.rs  error.rs  lib.rs  main.rs
crates/llm-cli-wrapper/tests/: e2e_wrapper_matrix.rs  real_agent_extraction.rs
crates/oai-runner/: Cargo.toml  README.md  build.rs
crates/oai-runner/docs/: TASK-134-implementation-notes.md  TASK-134-requirements.md  TASK-135-requirements.md
crates/oai-runner/src/: config.rs  main.rs  pricing.rs
crates/oai-runner/tests/: version_flag.rs
crates/orchestrator-cli/: Cargo.toml  README.md
crates/orchestrator-cli/docs/: task-002-cli-help-error-implementation-notes.md  task-002-cli-help-error-mockup-review.md  task-002-cli-help-error-requirements.md  task-002-cli-help-error-ux-brief.md  task-004-wrapper-mcp-contract-implementation-notes.md  task-004-wrapper-mcp-contract-requirements.md  task-005-rust-workspace-ci-implementation-notes.md  task-005-rust-workspace-ci-requirements.md  task-006-multi-binary-release-pipeline-implementation-notes.md  task-006-multi-binary-release-pipeline-requirements.md  task-007-rust-only-dependency-policy-implementation-notes.md  task-007-rust-only-dependency-policy-requirements.md  task-008-json-envelope-contract-implementation-notes.md  task-008-json-envelope-contract-requirements.md  task-009-destructive-command-implementation-notes.md  task-009-destructive-command-requirements.md  task-010-run-event-persistence-lookup-implementation-notes.md  task-010-run-event-persistence-lookup-requirements.md  task-022-guided-onboarding-config-wizard-implementation-notes.md  task-022-guided-onboarding-config-wizard-requirements.md  task-024-versioned-skill-registry-implementation-notes.md  task-024-versioned-skill-registry-requirements.md  task-026-event-notification-connector-framework-implementation-notes.md  task-026-event-notification-connector-framework-requirements.md  task-026-notification-operator-guide.md  task-027-claude-bypass-permissions-default-requirements.md  task-028-agent-runner-ipc-auth-implementation-notes.md  task-028-agent-runner-ipc-auth-requirements.md  task-029-agent-runner-env-sanitizer-allowlist-implementation-notes.md  task-029-agent-runner-env-sanitizer-allowlist-requirements.md  task-030-runner-status-implementation-notes.md  task-030-runner-status-requirements.md  task-030-runner-status-research-notes.md  task-031-sanitize-scope-and-error-classification-implementation-notes.md  task-031-sanitize-scope-and-error-classification-requirements.md  task-034-typed-error-classification-implementation-notes.md  task-034-typed-error-classification-requirements.md  task-036-dependency-hygiene-axum-alignment-implementation-notes.md  task-036-dependency-hygiene-axum-alignment-requirements.md  task-037-merge-conflict-auto-resolution-implementation-notes.md  (+49 more)
crates/orchestrator-cli/src/: main.rs  shared.rs
crates/orchestrator-cli/tests/: cli_e2e.rs  cli_json_contract.rs  cli_skill_lifecycle.rs  cli_smoke.rs  daemon_e2e.rs  init_e2e.rs  rust_only_dependency_policy.rs  session_continuation_e2e.rs  setup_doctor_e2e.rs  workflow_state_machine_e2e.rs
crates/orchestrator-config/: Cargo.toml  README.md
crates/orchestrator-config/config/: agent-runtime-config.v1.json  agent-runtime-config.v2.json
crates/orchestrator-config/src/: agent_runtime_config.rs  bundled_packs.rs  json.rs  lib.rs  pack_marketplace.rs  pack_registry.rs  pack_selection.rs  skill_definition.rs  skill_resolution.rs  skill_scoping.rs  test_support.rs
crates/orchestrator-core/: Cargo.toml  README.md
crates/orchestrator-core/docs/: task-003-runner-lifecycle-regression-implementation-notes.md  task-003-runner-lifecycle-regression-requirements.md  task-032-priority-type-unification-implementation-notes.md  task-032-priority-type-unification-requirements.md  task-033-core-state-file-locking-implementation-notes.md  task-033-core-state-file-locking-requirements.md  task-035-file-service-hub-git-init-opt-in-implementation-notes.md  task-035-file-service-hub-git-init-opt-in-requirements.md  task-040-agent-runtime-config-structured-output-requirements.md  task-040-agent-runtime-config-structured-output-research-notes.md  task-046-clear-paused-flag-on-unblock-implementation-notes.md  task-046-clear-paused-flag-on-unblock-requirements.md  task-047-task-status-transition-validation-requirements.md  task-053-load-workflow-phase-plans-from-config-implementation-notes.md  task-053-load-workflow-phase-plans-from-config-requirements.md  task-053-load-workflow-phase-plans-from-config-ux-brief.md  task-054-merge-conflict-completed-at-requirements.md  task-056-recalibrate-task-priority-distribution-implementation-notes.md  task-056-recalibrate-task-priority-distribution-requirements.md  task-096-built-in-agent-personas-implementation-notes.md  task-096-built-in-agent-personas-requirements.md
crates/orchestrator-daemon-runtime/: Cargo.toml  README.md
crates/orchestrator-git-ops/: Cargo.toml  README.md
crates/orchestrator-logging/: Cargo.toml
crates/orchestrator-notifications/: Cargo.toml  README.md
crates/orchestrator-plugin-host/: Cargo.toml
crates/orchestrator-providers/: Cargo.toml  README.md
crates/orchestrator-web-api/: Cargo.toml  README.md
crates/orchestrator-web-server/: Cargo.toml  README.md  openapi.json
crates/protocol/: Cargo.toml  README.md
crates/workflow-runner-v2/: Cargo.toml
(+1689 files in other folders)
