[workspace]
members = [
  "crates/agent-runner",
  "crates/protocol",
  "crates/llm-cli-wrapper",
  "crates/orchestrator-daemon-runtime",
  "crates/orchestrator-notifications",
  "crates/orchestrator-git-ops",
  "crates/orchestrator-logging",
  "crates/orchestrator-config",
  "crates/orchestrator-core",
  "crates/orchestrator-store",
  "crates/orchestrator-cli",
  "crates/orchestrator-web-contracts",
  "crates/orchestrator-web-api",
  "crates/orchestrator-web-server",
  "crates/oai-runner",
  "crates/workflow-runner-v2",
  "crates/orchestrator-providers",
]
default-members = [
  "crates/orchestrator-cli",
  "crates/agent-runner",
  "crates/llm-cli-wrapper",
  "crates/oai-runner",
]
resolver = "2"

[workspace.package]
license = "Elastic-2.0"

[workspace.dependencies]
protocol = { path = "crates/protocol" }
llm-cli-wrapper = { path = "crates/llm-cli-wrapper" }
orchestrator-daemon-runtime = { path = "crates/orchestrator-daemon-runtime" }
orchestrator-notifications = { path = "crates/orchestrator-notifications" }
orchestrator-git-ops = { path = "crates/orchestrator-git-ops" }
orchestrator-logging = { path = "crates/orchestrator-logging" }
orchestrator-config = { path = "crates/orchestrator-config" }
orchestrator-core = { path = "crates/orchestrator-core" }
orchestrator-providers = { path = "crates/orchestrator-providers" }
orchestrator-store = { path = "crates/orchestrator-store" }
orchestrator-web-contracts = { path = "crates/orchestrator-web-contracts" }
orchestrator-web-api = { path = "crates/orchestrator-web-api" }
orchestrator-web-server = { path = "crates/orchestrator-web-server" }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
croner = "3.0.1"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
opt-level = "z"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
doc_markdown = "allow"
struct_excessive_bools = "allow"
too_many_lines = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
cast_lossless = "allow"
similar_names = "allow"
wildcard_imports = "allow"
needless_pass_by_value = "allow"
return_self_not_must_use = "allow"
unused_self = "allow"
struct_field_names = "allow"
trivially_copy_pass_by_ref = "allow"
redundant_closure_for_method_calls = "allow"
single_match_else = "allow"
manual_string_new = "allow"
items_after_statements = "allow"
implicit_hasher = "allow"
uninlined_format_args = "allow"
unnecessary_wraps = "allow"
option_map_unwrap_or = "allow"
option_map_unwrap_or_else = "allow"
match_bool = "allow"
let_underscore_untyped = "allow"
manual_let_else = "allow"
assigning_clones = "allow"
unused_async = "allow"
option_if_let_else = "allow"
semicolon_if_nothing_returned = "allow"
cast_possible_wrap = "allow"
if_not_else = "allow"
default_trait_access = "allow"
used_underscore_binding = "allow"
unreadable_literal = "allow"
map_unwrap_or = "allow"
needless_raw_string_hashes = "allow"
match_same_arms = "allow"
ignored_unit_patterns = "allow"
needless_borrows_for_generic_args = "allow"
ref_option = "allow"
option_option = "allow"
elidable_lifetime_names = "allow"
needless_continue = "allow"
implicit_clone = "allow"
format_push_string = "allow"
format_collect = "allow"
unnecessary_debug_formatting = "allow"
bool_assert_comparison = "allow"
unnested_or_patterns = "allow"
unnecessary_semicolon = "allow"
stable_sort_primitive = "allow"
option_as_ref_cloned = "allow"
items_after_test_module = "allow"
cloned_instead_of_copied = "allow"
clone_on_copy = "allow"
too_many_arguments = "allow"
redundant_else = "allow"
float_cmp = "allow"
comparison_to_empty = "allow"
bool_to_int_with_if = "allow"
large_futures = "allow"
map_flatten = "allow"
cloned_ref_to_slice_refs = "allow"
field_reassign_with_default = "allow"
