[package]
name = "agent-runner"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { path = "../protocol" }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
fs2 = "0.4"
dirs = "6.0"
chrono = "0.4"

[dev-dependencies]
protocol = { path = "../protocol", features = ["test-utils"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation", "Win32_Security"] }

[lints]
workspace = true
