[package]
name = "agent-runner"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_runner"
path = "src/lib.rs"

[[bin]]
name = "agent-runner"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
fs2 = "0.4"
dirs = "6.0"
chrono = "0.4"
uuid = { version = "1.7", features = ["v4"] }

[dev-dependencies]
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3"
once_cell = "1.19"

[lints]
workspace = true
