[package]
name = "oai-runner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ao-oai-runner"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "time", "process"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
futures-util = "0.3"
glob = "0.3"
jsonschema = "0.45"
eventsource-stream = "0.2"
tiktoken-rs = "0.9"
tokio-util = "0.7"
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.2", features = ["client", "transport-child-process", "transport-streamable-http-client-reqwest"] }
protocol = { path = "../protocol" }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"

[lints]
workspace = true
