[package]
name = "orchestrator-cli"
version = "0.2.30"
edition = "2021"

[[bin]]
name = "ao"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "process", "time", "net", "signal"] }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-logging = { path = "../orchestrator-logging" }
orchestrator-web-api = { path = "../orchestrator-web-api" }
orchestrator-web-server = { path = "../orchestrator-web-server" }
protocol = { path = "../protocol" }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }
orchestrator-daemon-runtime = { workspace = true }
orchestrator-notifications = { workspace = true }
workflow-runner-v2 = { path = "../workflow-runner-v2" }
orchestrator-config = { workspace = true }
dirs = "6.0"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rmcp = { version = "1.2", features = ["transport-io"] }
schemars = "1.0"
sha2 = "0.10"
semver = "1"
webbrowser = "1"
termimad = "0.34"
axum = { workspace = true }
libc = "0.2"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json"] }
colored = "3.0"
tracing = "0.1"

[dev-dependencies]
assert_cmd = "2"
fs2 = "0.4"
protocol = { path = "../protocol", features = ["test-utils"] }
tempfile = "3"
toml = "1.0"

[lints]
workspace = true
