[package]
name = "orchestrator-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
croner = { workspace = true }
protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
semver = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
