[package]
name = "orchestrator-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt", "macros", "signal", "time", "net", "io-util", "process"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "6.0"
libc = "0.2"
fs2 = "0.4"
sha2 = "0.10"
protocol = { path = "../protocol" }
orchestrator-providers = { workspace = true }
orchestrator-store = { workspace = true }
orchestrator-config = { workspace = true }
cli-wrapper = { path = "../llm-cli-wrapper", package = "llm-cli-wrapper" }

[features]
jira = ["orchestrator-providers/jira"]
linear = ["orchestrator-providers/linear"]
gitlab = ["orchestrator-providers/gitlab"]

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
