[package]
name = "orchestrator-daemon-runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_daemon_runtime"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
croner = { workspace = true }
fs2 = "0.4"
orchestrator-core = { workspace = true }
protocol = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
workflow-runner-v2 = { path = "../workflow-runner-v2" }

[dev-dependencies]
protocol = { workspace = true, features = ["test-utils"] }
tempfile = "3"

[lints]
workspace = true
