[package]
name = "orchestrator-git-ops"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_git_ops"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
orchestrator-core = { workspace = true }
protocol = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt", "time"] }
uuid = { version = "1", features = ["v4"] }
workflow-runner-v2 = { path = "../workflow-runner-v2" }

[dev-dependencies]
protocol = { workspace = true, features = ["test-utils"] }
tempfile = "3"

[lints]
workspace = true
