[package]
name = "orchestrator-notifications"
version = "0.1.0"
edition = "2021"

[lib]
name = "orchestrator_notifications"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"
protocol = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }

[lints]
workspace = true
