[package]
name = "orchestrator-plugin-host"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
orchestrator-plugin-protocol = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["io-util", "process", "rt", "macros", "time"] }
tracing = "0.1"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
