[package]
name = "orchestrator-providers"
version = "0.1.0"
edition = "2021"

[dependencies]
protocol = { workspace = true }
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["process"] }

[features]
jira = ["reqwest"]
linear = ["reqwest"]
gitlab = ["reqwest"]

[lints]
workspace = true
