[package]
name = "orchestrator-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
async-stream = "0.3"
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
axum = { workspace = true, features = ["macros"] }
include_dir = "0.7"
mime_guess = "2"
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-web-api = { path = "../orchestrator-web-api" }
orchestrator-web-contracts = { path = "../orchestrator-web-contracts" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
futures-core = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tower-http = { version = "0.6", features = ["compression-br", "compression-gzip", "cors"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[lints]
workspace = true
