[package]
name = "protocol"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
dirs = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
sha2 = "0.10"
once_cell = "1.19"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.31", features = ["signal"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = ["Win32_System_Threading", "Win32_System_JobObjects", "Win32_Foundation", "Win32_Security"] }

[features]
test-utils = []

[dev-dependencies]
protocol = { path = ".", features = ["test-utils"] }
proptest = "1.4"
schemars = "0.8"
tempfile = "3"

[lints]
workspace = true
