[package]
name = "workflow-runner-v2"
version = "0.1.0"
edition = "2021"

[lib]
name = "workflow_runner_v2"
path = "src/lib.rs"

[[bin]]
name = "ao-workflow-runner"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

protocol = { path = "../protocol" }
orchestrator-core = { path = "../orchestrator-core" }
orchestrator-config = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
tempfile = "3.10"

[lints]
workspace = true
